--- a/config.json
+++ b/config.json
@@ -1,3 +1,11 @@
 {
-    "driver_path": "/usr/bin/chromedriver"
+    "driver": {
+        "path": "/usr/bin/chromedriver",
+        "chrome_options": [
+            "--headless",
+            "--disable-gpu",
+            "--no-sandbox",
+            "--disable-dev-shm-usage"
+        ]
+    }
 }
